# shared-redis

./: .gitignore  404.html  Cargo.toml  QUICK_START.md  README.md  index.html  print.html  robots.txt  searchindex.js  searchindex.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
advanced/: best-practices.html  error-handling.html  monitoring.html  performance-tuning.html
api/: cache-manager.html  configuration.html  operations.html  types.html
benches/: cache_benchmarks.rs
contributing/: code-style.html  development-setup.html  documentation.html  testing.html
docs/: SEO.md  book.toml
docs/src/: SUMMARY.md  index.html  sitemap.xml
examples/: basic-caching.html  microservices.html  performance.html  pub-sub.html
examples/basic-caching/: Cargo.toml
examples/basic-caching/src/: main.rs
examples/pub-sub/: Cargo.toml
examples/pub-sub/src/: main.rs
features/: caching.html  connection-management.html  data-operations.html  pub-sub.html
getting-started/: configuration.html  installation.html  quick-start.html
src/: cache.rs  cli.rs  config.rs  lib.rs  operations.rs
