[package]
name = "shared-redis"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "=0.10.61", features = ["vendored"] }
redis = { version = "0.23.1", features = ["tokio-native-tls-comp", "connection-manager", "tls-native-tls"] }
anyhow = "=1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
