[package]
name = "shared-redis"
version = "1.0.0"
edition = "2021"
description = "A centralized Redis library for microservices architecture, providing caching, pub/sub messaging, and data persistence capabilities with automatic connection management and error handling."
keywords = ["redis", "caching", "microservices", "pub-sub", "connection-pooling", "performance", "async", "tokio", "serde"]
categories = ["asynchronous", "caching", "database", "web-programming"]
license = "MIT"
repository = "https://github.com/Eshya/shared-redis"
documentation = "https://github.com/Eshya/shared-redis"
readme = "README.md"
authors = ["Eshya <achmadayas@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "=0.10.61", features = ["vendored"] }
redis = { version = "0.23.1", features = ["tokio-native-tls-comp", "connection-manager", "tls-native-tls"] }
anyhow = "=1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.36", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
